force-app/main/default/objects/Firm_Team__c/Firm_Team__c.object-meta.xml
<CustomObject>
    <label>Firm Team</label>
    <nameField>
        <label>Firm Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Firm Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>