force-app/main/default/objects/Firm_Team__c/fields/Active_Case_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Case_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Active Case Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>