force-app/main/default/objects/Firm_Team__c/fields/Firm__c.field-meta.xml
<CustomField>
    <fullName>Firm__c</fullName>
    <label>Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Firm Teams</relationshipLabel>
    <relationshipName>Firm_Teams</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>