force-app/main/default/objects/Firm_Team__c/fields/Firm_ID__c.field-meta.xml
<CustomField>
    <fullName>Firm_ID__c</fullName>
    <formula>Firm__r.FirmID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firm ID</label>
    <type>Text</type>
</CustomField>