force-app/main/default/objects/Firm_Team__c/fields/Firm_Team_Id__c.field-meta.xml
<CustomField>
    <fullName>Firm_Team_Id__c</fullName>
    <displayFormat>FT{0000}</displayFormat>
    <label>Firm Team Id</label>
    <type>AutoNumber</type>
</CustomField>