force-app/main/default/objects/Firm_Team__c/fields/Must_have_Active_Members_Validation__c.field-meta.xml
<CustomField>
    <fullName>Must_have_Active_Members_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Must have Active Members Validation</label>
    <type>Checkbox</type>
</CustomField>