force-app/main/default/objects/Firm_Team__c/fields/Physical_Address__c.field-meta.xml
<CustomField>
    <fullName>Physical_Address__c</fullName>
    <label>Physical Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>