force-app/main/default/objects/Firm_Team__c/validationRules/Cant_Deactivate_with_open_Cases.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Deactivate_with_open_Cases</fullName>
    <active>true</active>
    <errorConditionFormula>Deactivate_Validation__c = true</errorConditionFormula>
    <errorMessage>You can&apos;t deactivate a team if it still has active Cases.</errorMessage>
</ValidationRule>