force-app/main/default/objects/Firm_Team__c/validationRules/Must_be_two_Handlers.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_be_two_Handlers</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Status__c) =&apos;Active&apos;, Must_have_Active_Members_Validation__c=true)</errorConditionFormula>
    <errorMessage>You must have at least 2 active handlers in an active team</errorMessage>
</ValidationRule>