force-app/main/default/objects/Firm_Team__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Firm__c</columns>
    <columns>Firm_Team_Id__c</columns>
    <columns>Firm_ID__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>